deploy-istio/zero/email/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email
  namespace: zero
  labels:
    app: email
    service: email
spec:
  selector:
    app: email
  ports:
  - name: grpc-port
    protocol: TCP
    port: 8082
    targetPort: 8082
  type: ClusterIP
